@@ -1,5 +1,4 @@
 ==To-Do==
-* Implement ControlBus scheduler
 * Finish 6502 CPU
 * Implement Apple-1 I/O
 * Implement Apple-1 Cassette Interface
