@@ -19,6 +19,8 @@ public:
 	bool getValue(string name, string& value);
 	bool setRef(string name, OEComponent *ref);
 	
+    bool postMessage(OEComponent *sender, int message, void *data);
+    
 	void notify(OEComponent *sender, int notification, void *data);
 	
 private:
